Fix overflow for task list

--- a/incamp19/todo/css/app.css
+++ b/incamp19/todo/css/app.css
@@ -46,6 +46,7 @@ textarea {
     background: rgb(241, 241, 241);
     border-radius: 3px;
     padding: 10px;
+    overflow-y: auto;
 }
 
 .add-task {
